Need to do Detail Screen menus. TermDetails is already done maybe.

--- a/app/src/main/res/layout-land/activity_course_detail.xml
+++ b/app/src/main/res/layout-land/activity_course_detail.xml
@@ -6,7 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".UI.CourseDetail">
 
-
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
