--- a/app/src/main/res/layout-land/activity_course_screen.xml
+++ b/app/src/main/res/layout-land/activity_course_screen.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".UI.CourseScreen">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/courseRecyclerView"
         android:layout_width="0dp"
@@ -13,7 +20,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addCourseAction"
@@ -22,7 +29,7 @@
         android:layout_margin="10dp"
         android:clickable="true"
         android:contentDescription="add"
-        android:onClick="goToCourseDetailScreen"
+        android:onClick="goToTermScreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_add" />
