--- a/app/src/main/res/layout-land/activity_term_detail.xml
+++ b/app/src/main/res/layout-land/activity_term_detail.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".UI.TermDetail">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/labelTermStart"
         android:layout_width="40dp"
@@ -15,7 +22,8 @@
         android:text="Start Date"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTermStart"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelTermTitle" />
 
     <TextView
         android:id="@+id/labelTermEnd"
@@ -33,13 +41,12 @@
         android:layout_width="235dp"
         android:layout_height="50dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Enter Term Title"
         android:inputType="textPersonName"
         android:textColorHint="#D1D1D1"
         app:layout_constraintStart_toEndOf="@+id/labelTermTitle"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
         android:id="@+id/editTextTermStart"
@@ -94,12 +101,10 @@
         android:id="@+id/termDetailSaveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="136dp"
         android:text="SAVE TERM"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTermEnd" />
+        app:layout_constraintBottom_toBottomOf="@+id/editTextTermEnd"
+        app:layout_constraintEnd_toEndOf="@+id/termDetailAddCourseToTermButton"
+        app:layout_constraintStart_toStartOf="@+id/termDetailAddCourseToTermButton" />
 
     <Button
         android:id="@+id/termDetailAddCourseToTermButton"
@@ -112,9 +117,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/coursesInsideTermDetails"
-        android:layout_width="212dp"
-        android:layout_height="233dp"
+        android:layout_width="208dp"
+        android:layout_height="163dp"
         android:background="@drawable/my_border_drawable"
+        app:layout_constraintEnd_toEndOf="@+id/labelCurrentCourses"
         app:layout_constraintStart_toEndOf="@+id/editTextTermStart"
         app:layout_constraintTop_toTopOf="@+id/editTextTermStart" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
