--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,31 +8,78 @@
     android:background="#E9ECEF"
     tools:context=".UI.MainActivity">
 
-    <Button
-        android:id="@+id/start"
-        android:layout_width="232dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginBottom="92dp"
-        android:onClick="goToTermScreen"
-        android:text="Start"
-        android:textColor="@color/white"
-        android:textSize="48sp"
-        app:cornerRadius="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="161dp"
-        android:layout_height="156dp"
-        app:layout_constraintBottom_toTopOf="@+id/start"
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.31"
-        app:srcCompat="@mipmap/terms_launcher" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="125dp"
+                android:layout_height="121dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="21dp"
+                android:contentDescription="img"
+                app:srcCompat="@mipmap/terms_launcher" />
+
+            <Button
+                android:id="@+id/goTerms"
+                style="@style/MyButtonStyle"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:onClick="goToTermScreen"
+                android:text="All Terms"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:cornerRadius="12dp" />
+
+            <Button
+                android:id="@+id/goCourses"
+                style="@style/MyButtonStyle"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:onClick="goToCourseScreen"
+                android:text="All Courses"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:cornerRadius="12dp" />
+
+            <Button
+                android:id="@+id/goAssessments"
+                style="@style/MyButtonStyle"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:onClick="goToAssessmentScreen"
+                android:text="All Assessments"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:cornerRadius="12dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
