--- a/app/src/main/res/layout/activity_term_detail.xml
+++ b/app/src/main/res/layout/activity_term_detail.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".UI.TermDetail">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/labelTermStart"
         android:layout_width="40dp"
@@ -33,13 +39,12 @@
         android:layout_width="235dp"
         android:layout_height="50dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Enter Term Title"
         android:inputType="textPersonName"
         android:textColorHint="#D1D1D1"
         app:layout_constraintStart_toEndOf="@+id/labelTermTitle"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
         android:id="@+id/editTextTermStart"
@@ -112,8 +117,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/coursesInsideTermDetails"
-        android:layout_width="213dp"
-        android:layout_height="315dp"
+        android:layout_width="211dp"
+        android:layout_height="223dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/my_border_drawable"
