--- a/app/src/main/res/layout/activity_assessments_screen.xml
+++ b/app/src/main/res/layout/activity_assessments_screen.xml
@@ -20,6 +20,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+    <TextView
+        android:id="@+id/noAssessmentLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="No Assessments. Tap + to Choose Course to Add Assessment to"
+        android:textColor="@color/hintText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"></TextView>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addAssessmentAction"
         android:layout_width="60dp"
@@ -27,7 +38,7 @@
         android:layout_margin="10dp"
         android:clickable="true"
         android:contentDescription="add"
-        android:onClick="goToTermScreen"
+        android:onClick="goToCourseScreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_add" />
